# StatusFlow

./: .gitignore  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json
.codex/: config.toml
.gstack/qa-reports/: qa-report-localhost-2026-04-13.md
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  db.py  domain.py  main.py  models.py  schemas.py  seed.py  services.py
apps/api/tests/: test_api.py
apps/mobile/: README.md  settings.gradle.kts
apps/mobile/app/: build.gradle.kts
apps/web/: README.md  index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.regression-1.test.tsx  App.test.tsx  App.tsx  styles.css
apps/web/src/components/: AuthScreen.tsx  ErrorBoundary.tsx  Hero.tsx  OrderInspector.tsx  OrderTable.tsx  StatusSummary.tsx
apps/web/src/data/: webApi.ts  webCacheStore.ts  webMutationQueueStore.ts  webSessionStore.ts  webSyncStore.ts  webTypes.ts
apps/web/tests/e2e/: cross-client-driver.mjs  (+1 more)
docs/: ARCHITECTURE.md  DESIGN.md  LOCAL_DEV_LOOP.md  MOBILE_REDESIGN_IMPLEMENTATION_PLAN.md  MOBILE_UI_LOOP.md  MOBILE_UX_REDESIGN_MOCKUPS.html  PRODUCT_BRIEF.md  ROADMAP.md  TEST_STRATEGY.md  UI_PHASE_STACK.md  WEB_REDESIGN_PLAN.md
docs/design-mockups/web-home-layout-20260421/: TODO.md  customer-grid-tabs.html  operator-grid-tabs.html
infra/docker/: README.md
scripts/: README.md  cross-client-sync.ps1  e2e-smoke.ps1  mobile-preview.ps1  mobile-smoke.ps1  start-mobile-emulator-visible.ps1  start-mobile-emulator.ps1
(+12 files in other folders)
