[project]
name = "statusflow-api"
version = "0.1.0"
description = "FastAPI backend for StatusFlow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
